--- a/saturn-vanity/index.html
+++ b/saturn-vanity/index.html
@@ -49,13 +49,43 @@
         </div>
     </section>
 
+    <!-- Formulario -->
+
+    <div id="contact-section">
+        <section id="contact" class="py-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Contáctanos</h2>
+                <form id="contactForm" method="POST" action="components/send-email.php"> 
+                    <div class="mb-3">
+                        <label for="fullName" class="form-label">Nombre Completo*</label>
+                        <input type="text" class="form-control" id="fullName" name="name" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="company" class="form-label">Empresa</label>
+                        <input type="text" class="form-control" id="company" name="company">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Correo Electrónico*</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="message" class="form-label">Mensaje*</label>
+                        <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </form>
+            </div>
+        </section>
+    </div>
+    
+
     <!-- Cargar sección de Marcas -->
     <div id="brands-section"></div>
 
     <!-- Botón de WhatsApp -->
     <div class="whatsapp-button">
         <a href="https://api.whatsapp.com/send?phone=+351963149791" target="_blank">
-            <img src="../saturnVanity/assets/social/whatsapp.png" alt="WhatsApp" class="whatsapp-logo">
+            <img src="/assets/social/whatsapp.png" alt="WhatsApp" class="whatsapp-logo">
         </a>
     </div>
 
@@ -88,16 +118,16 @@
                     <div class="d-flex justify-content-end">
                         <!-- Reemplaza el texto con íconos si los tienes -->
                         <a href="https://www.instagram.com" class="text-white mx-2">
-                            <img src="../saturnVanity/assets/social/instagram.png" alt="Instagram" width="24">
+                            <img src="assets/social/instagram.png" alt="Instagram" width="24">
                         </a>
                         <a href="https://www.facebook.com" class="text-white mx-2">
-                            <img src="../saturnVanity/assets/social/facebook.png" alt="Facebook" width="24">
+                            <img src="assets/social/facebook.png" alt="Facebook" width="24">
                         </a>
-                        <a href="https://www.twitter.com" class="text-white mx-2">
-                            <img src="../saturnVanity/assets/social/twitter.png" alt="X" width="24">
+                        <a href="https://www.twitter.com" class="text-white mx-2" style="color: white;">
+                            <img src="/assets/social/twitter(1).png" alt="X" width="24">
                         </a>
                         <a href="https://www.linkedin.com" class="text-white mx-2">
-                            <img src="../saturnVanity/assets/social/linkedin.png" alt="LinkedIn" width="24">
+                            <img src="/assets/social/linkedin.png" alt="LinkedIn" width="24">
                         </a>
                     </div>
                 </div>
@@ -106,7 +136,7 @@
     </footer>
 
     <!-- Incluye el script main.js -->
-    <script src="./main.js"></script>
+    <script src="./main.js" type="module"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
