--- a/saturn-vanity/index.html
+++ b/saturn-vanity/index.html
@@ -10,14 +10,17 @@
 </head>
 
 <body>
-    <!-- Sección Hero -->
-    <section class="hero bg-primary text-white text-center d-flex align-items-center justify-content-center">
+    <section class="hero text-white text-center d-flex align-items-center justify-content-center">
         <div class="container">
-            <h1 class="display-4">Bienvenido a Nuestro Proyecto</h1>
-            <p class="lead">Soluciones innovadoras para un mundo en constante cambio.</p>
-            <a href="#quienes-somos" class="btn btn-light mt-4">Conócenos</a>
+          <!-- Contenedor limitado a 500x500 con overflow hidden -->
+          <div class="animation-container">
+            <!-- Canvas de 1000x1000 píxeles -->
+            <canvas id="canvas3d"></canvas>
+          </div>
         </div>
-    </section>
+      </section>
+      
+  
 
     <!-- Sección Quienes Somos -->
     <section id="quienes-somos" class="py-5">
