--- a/saturn-vanity/index.html
+++ b/saturn-vanity/index.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <!-- Navbar -->
+    Navbar
     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="/assets/logoNavBar.png" alt="svl logo"></a>
@@ -56,9 +56,12 @@
         </div>
 
         <div id="deals" >
+          <div class="textHero">
+          <h3>En <span style="color: #c8c5c0;">SATURN VANITY</span> </h3>
             <h3>Tenemos siempre los mejores precios en moviles</h3>
             <h4>Descargate las ofertas del dia haciendo click aca!</h4>
-            <button><p>Descarga las ofertas</p></button>
+          </div>
+            <button id="offer-button"><p>OFERTAS DE HOY</p></button>
         </div>
 
        
