--- a/saturn-vanity/index.html
+++ b/saturn-vanity/index.html
@@ -100,7 +100,7 @@
     <!-- Formulario -->
 
     <div id="contact-section">
-      <section id="contact" class="py-5">
+      <section id="contact" >
         <div class="container">
           <h2>CONTÁCTANOS</h2>
 
@@ -180,70 +180,68 @@
       </a>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white py-4">
-      <div class="container text-center mb-4">
-        <p>VAT n° PT517589850</p>
+   <!-- Footer -->
+<footer class="bg-dark text-white py-4">
+  <div class="container text-left mb-4">
+    <p>VAT n° PT517589850</p>
+  </div>
+  <div class="container">
+    <div class="row">
+      <!-- Izquierda: Información de la oficina -->
+      <div class="col-md-4 text-start">
+        <h5 class="text-white">Office</h5>
+        <p>Rua Rossio do Meio 10 A 11 G<br />7350-135, Elvas, Portugal</p>
+        <h6 class="text-white">Contact</h6>
+        <p>+351 963 149 791<br />info@saturnvanity.com</p>
       </div>
-      <div class="container">
-        <div class="row">
-          <!-- Izquierda: Información de la oficina -->
-          <div class="col-md-4 text-start">
-            <h5>Office</h5>
-            <p>Rua Rossio do Meio 10 A 11 G<br />7350-135, Elvas, Portugal</p>
-            <h6>Contact</h6>
-            <p>+351 963 149 791<br />info@saturnvanity.com</p>
-          </div>
 
-          <!-- Centro: Información del almacén -->
-          <div class="col-md-4 text-center">
-            <h5>Warehouse</h5>
-            <p>
-              Rua da Gráfica Almondina lt 34<br />2350-483, Torres Novas,
-              Portugal
-            </p>
-            <h6>Contact</h6>
-            <p>+351 936 256 067</p>
-          </div>
+      <!-- Centro: Información del almacén -->
+      <div class="col-md-4 text-start text-md-center">
+        <h5 class="text-white">Warehouse</h5>
+        <p>
+          Rua da Gráfica Almondina lt 34<br />2350-483, Torres Novas,
+          Portugal
+        </p>
+        <h6 class="text-white">Contact</h6>
+        <p>+351 936 256 067</p>
+      </div>
 
-          <!-- Derecha: Redes sociales -->
-          <div class="col-md-4 text-end">
-            <h5>Síguenos en nuestras redes sociales:</h5>
-            <div class="d-flex justify-content-end">
-              <!-- Reemplaza el texto con íconos si los tienes -->
-              <a href="https://www.instagram.com" class="text-white mx-2">
-                <img
-                  src="assets/social/instagram.png"
-                  alt="Instagram"
-                  width="24"
-                />
-              </a>
-              <a href="https://www.facebook.com" class="text-white mx-2">
-                <img
-                  src="assets/social/facebook.png"
-                  alt="Facebook"
-                  width="24"
-                />
-              </a>
-              <a
-                href="https://www.twitter.com"
-                class="text-white mx-2"
-                style="color: white"
-              >
-                <img src="/assets/social/twitter(1).png" alt="X" width="24" />
-              </a>
-              <a href="https://www.linkedin.com" class="text-white mx-2">
-                <img
-                  src="/assets/social/linkedin.png"
-                  alt="LinkedIn"
-                  width="24"
-                />
-              </a>
-            </div>
-          </div>
+      <!-- Derecha: Redes sociales -->
+      <div class="col-md-4 text-start text-md-end">
+        <!-- Ocultar el texto en dispositivos móviles -->
+        <h5 class="text-white d-none d-md-block">Síguenos en nuestras redes sociales:</h5>
+        <div class="d-flex justify-content-start justify-content-md-end">
+          <a href="https://www.instagram.com" class="text-white mx-2">
+            <img
+              src="assets/social/instagram.png"
+              alt="Instagram"
+              width="24"
+            />
+          </a>
+          <a href="https://www.facebook.com" class="text-white mx-2">
+            <img
+              src="assets/social/facebook.png"
+              alt="Facebook"
+              width="24"
+            />
+          </a>
+          <a href="https://www.twitter.com" class="text-white mx-2">
+            <img src="assets/social/twitter(1).png" alt="X" width="24" />
+          </a>
+          <a href="https://www.linkedin.com" class="text-white mx-2">
+            <img
+              src="/assets/social/linkedin.png"
+              alt="LinkedIn"
+              width="24"
+            />
+          </a>
         </div>
       </div>
-    </footer>
+    </div>
+  </div>
+</footer>
+
+
 
     <!-- Incluye el script main.js -->
     <script src="./main.js" type="module"></script>
