--- a/saturn-vanity/index.html
+++ b/saturn-vanity/index.html
@@ -37,14 +37,14 @@
           </ul>
           <!-- Selector de Idioma -->
           <select id="language-selector" class="form-select ms-2" style="width: auto;">
-            <option value="es">Español</option>
-            <option value="en">English</option>
-            <option value="it">Italiano</option>
-            <option value="de">Deutsch</option>
-            <option value="fr">Français</option>
-            <option value="pt">Português</option>
-            <option value="el">Ελληνικά</option>
-            <option value="pl">Polski</option>
+            <option value="es">ES</option>
+            <option value="en">EN</option>
+            <option value="it">IT</option>
+            <option value="de">DE</option>
+            <option value="fr">FR</option>
+            <option value="pt">PT</option>
+            <option value="el">Ελ</option>
+            <option value="pl">PL</option>
           </select>
         </div>
       </div>
